# newsletter-agent

./: .env.example  .gitignore  LICENSE  README.md  main.py  pyproject.toml  requirements.txt  setup.sh
lib/: agent_template.py  file_reader.py  github.py  notion.py  s3.py  tools.py
